@@ -72,6 +72,7 @@ $version = "@VERSION@";
               "redhat-7.2", "redhat-7.3", "redhat-8.0", "redhat-9",
               "openna-1.0",
               "mandrake-7.1", "mandrake-7.2", "mandrake-9.0", "mandrake-9.1", "mandrake-9.2",
+              "mandrake-10.0", "mandrake-10.1",
               "debian-2.2", "debian-3.0", "debian-sarge",
               "suse-7.0", "turbolinux-7.0",
               "slackware-8.0.0", "slackware-8.1", "slackware-9.0.0", "slackware-9.1.0",
@@ -263,6 +264,8 @@ my $logindefs_dist_map = {
   'mandrake-9.0'    => $rh_logindefs_defaults,
   'mandrake-9.1'    => $rh_logindefs_defaults,
   'mandrake-9.2'    => $rh_logindefs_defaults,
+  'mandrake-10.0'   => $rh_logindefs_defaults,
+  'mandrake-10.1'   => $rh_logindefs_defaults,
   'pld-1.0'         => $rh_logindefs_defaults,
   'pld-1.1'         => $rh_logindefs_defaults,
   'pld-1.99'        => $rh_logindefs_defaults,
